--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -6,6 +6,7 @@ RUN apk add --update mariadb \
 RUN chown -R mysql /var/lib/mysql
 
 ADD ./tools/mariadb_config.sh ./mariadb_config.sh
+ADD ./conf/mariadb_server.conf /etc/my.cnf.d/mariadb_server.conf
 
 ENTRYPOINT ./mariadb_config.sh
 
