--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -3,8 +3,8 @@ server {
     listen 443 ssl default_server;
     listen [::]:443 ssl default_server;
     
-    root /usr/share/nginx/html;
-    index index.html index.htm;
+    root /var/www/wordpress;
+    index index.php;
 
     server_name localhost;
 
