Working on localhost need to import it inside a VM

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -42,6 +42,8 @@ services:
     env_file: .env
     networks:
       - inception
+    ports:
+      - 9000:9000
     volumes:
       - wordpress-data:/var/www/wordpress
 
