--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,13 +1,16 @@
 FROM alpine:3.17
 
 RUN apk add --update mariadb \
-		&& apk add --update mariadb-client
-
-RUN chown -R mysql /var/lib/mysql
+		mariadb-client
 
 ADD ./tools/mariadb_config.sh ./mariadb_config.sh
-ADD ./conf/mariadb_server.conf /etc/my.cnf.d/mariadb_server.conf
+ADD ./conf/mariadb_server.conf /etc/my.cnf.d/mariadb-server.cnf
 
 ENTRYPOINT ./mariadb_config.sh
 
-EXPOSE 3306
+#ENV DB_ADMINPASS=test
+#ENV DB_USER=lduboulo
+#ENV DB_PASS=123Soleil
+#ENV DB_NAME=inception
+
+#EXPOSE 3306
