--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,7 +1,9 @@
+include /etc/nginx/modules-enabled/*.conf;
+
 server {
 
-    listen 443 ssl default_server;
-    listen [::]:443 ssl default_server;
+    listen 0.0.0.0:443 ssl;
+    listen [::]:443 ssl;
     
     root /var/www/wordpress;
     index index.php;
@@ -10,17 +12,28 @@ server {
 
 	ssl_certificate /etc/ssl/fullchain.pem;
 	ssl_certificate_key /etc/ssl/key.pem;
-	ssl_session_timeout 1d;
-	ssl_session_tickets off;
 
 	ssl_protocols TLSv1.3;
-	ssl_prefer_server_ciphers off;
+	ssl_prefer_server_ciphers on;
 
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri /index.php$is_args$args;
+    }
+
+    location ~ \.php$ {
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		fastcgi_pass wordpress:9000;
+		fastcgi_index index.php;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param PATH_INFO $fastcgi_path_info;
+		fastcgi_intercept_errors on;
+        error_page 404 /error/404.php;
     }
 
 	error_log stderr;
-
 	access_log /dev/stdout;
+
+	include /etc/nginx/conf.d/*.conf;
+	include /etc/nginx/sites-enabled/*;
 }
