--- a/srcs/requirements/wordpress/conf/php.conf.ini
+++ b/srcs/requirements/wordpress/conf/php.conf.ini
@@ -1,7 +1,7 @@
 [www]
-user = www-data
-group = www-data
-listen = 9000
+user = xfs
+group = xfs
+listen = wordpress:9000
 pm = dynamic
 pm.max_children = 75
 pm.start_servers = 10
