Added correct gestion of volumes for VM

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -54,4 +54,14 @@ networks:
 
 volumes:
   database-data:
+    driver: local
+    driver-opts:
+      type: 'none'
+      o: 'bind'
+      device: '/home/lduboulo/data/mariadb'
   wordpress-data:
+    driver: local
+    driver-opts:
+      type: 'none'
+      o: 'bind'
+      device: '/home/lduboulo/data/wordpress'
