--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,7 +8,7 @@ server {
     root /var/www/wordpress;
     index index.php;
 
-    server_name localhost;
+    server_name DOMAIN_NAME;
 
 	ssl_certificate /etc/ssl/fullchain.pem;
 	ssl_certificate_key /etc/ssl/key.pem;
